added refresh test functionality to example

--- a/example/views/index.html
+++ b/example/views/index.html
@@ -23,7 +23,7 @@
 					<img src="http://placehold.it/530x400" width="530" height="400">
 					<p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla.</p>
 					<a class="btn" href="#">Button</a>
-		 </article>
+			</article>
 
 			<article data-level-column class="column">
 				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. </p>
@@ -32,8 +32,8 @@
 				<a class="btn" href="#">Button</a>
 			</article >
 
-		<section>
-
+		</section>
+		<p><a id="refresh" href="#">Refresh</a></p>
 	</main>
 
 	<script src="/js/index.js"></script>
